Another minor change